update resume controller